# htmx-slides

./: .gitignore  justfile  main.py  pyproject.toml
slides/: chat.py  counter.py  progress_meter.py  slides.py  table.py
templates/: chat.html  counter.html  progress_meter.html  slide.html  table.html
templates/chat/: input.html  message.html
templates/icons/: right.html
templates/slides/: 0.html  1.html  2.html  3.html
