[tool.poetry]
name = "slides"
version = "0.1.0"
description = ""
authors = ["Adam Kowalski <adam.kowalski@simspace.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
jinja2 = "^3.1.4"

[tool.pyright]
venvPath = "."
venv = ".venv"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
